--- a/DaysToWidgetExtension.entitlements
+++ b/DaysToWidgetExtension.entitlements
@@ -2,12 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIApplicationSceneManifest</key>
-	<dict>
-		<key>UIApplicationSupportsMultipleScenes</key>
-		<dict/>
-		<key>UISceneConfigurations</key>
-		<dict/>
-	</dict>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)com.danyloternovoi.DaysTo</string>
+	</array>
 </dict>
 </plist>
